// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AggregatedTranscriptions Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 iNPZuM"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 bdFdoP"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 dPQuSd sc-jzJRlG byHcWR"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 ikTqht"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 dLbpnh"
          >
            <span
              className="StyledText-sc-1sadyjn-0 bXoRNz"
              size="1em"
            >
              Transcribed Text
            </span>
            <button
              className="StyledButton-sc-323bzc-0 dmFHgS"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <span
                className="StyledText-sc-1sadyjn-0 bEMqcB"
                size="small"
              >
                ADD LINE
              </span>
            </button>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 tkzRw sc-kAzzGY cHmBTk"
          >
            <div
              className="StyledBox-sc-13pk1d4-0 joGoBe"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 isAjiK"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 fGMGTD"
                >
                  <h6
                    className="sc-bZQynM kvEEqW"
                  >
                    Aggregated Transcription
                  </h6>
                </div>
                <div
                  className="StyledBox-sc-13pk1d4-0 fWrrBh"
                >
                  <h6
                    className="sc-bZQynM kvEEqW"
                  >
                    Flag
                  </h6>
                </div>
                <div
                  className="StyledBox-sc-13pk1d4-0 dzunxD"
                >
                  <h6
                    className="sc-bZQynM sc-gzVnrw goYdle"
                  >
                    Consensus Score
                  </h6>
                </div>
              </div>
              <div
                className="StyledBox-sc-13pk1d4-0 kLQRpX"
              />
              <div
                className="StyledBox-sc-13pk1d4-0 kbrZBJ sc-EHOje kKWYcL"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 fNQaFh"
                  size="xsmall"
                >
                  This page does not contain transcription data.
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AggregationSettings Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 iNPZuM"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 jxCWxi"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 dMvAxT sc-jKJlTe MPVAE"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-ellipsis-h fa-w-16 "
          data-icon="ellipsis-h"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M328 256c0 39.8-32.2 72-72 72s-72-32.2-72-72 32.2-72 72-72 72 32.2 72 72zm104-72c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72zm-352 0c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <div
        className="StyledStack-ajspsk-0 cBSAEZ"
      >
        <div
          className="StyledStack__StyledStackLayer-ajspsk-1 zZZtW"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 fWrrBh"
          >
            <div
              className="StyledBox-sc-13pk1d4-0 itSRAm"
            >
              <span
                className="StyledText-sc-1sadyjn-0 bmpSIR"
              >
                Edit Aggregation Settings
              </span>
              <button
                aria-label="Close Aggregation Settings"
                className="StyledButton-sc-323bzc-0 dmFHgS"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                type="button"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-times-circle fa-w-16 "
                  data-icon="times-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </button>
            </div>
            <div
              className="StyledBox-sc-13pk1d4-0 fWrrBh"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 fWrrBh"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 htLYVV"
                >
                  <span
                    className="StyledText-sc-1sadyjn-0 bmpSIR"
                  >
                    Choose a clustering algorithm based on the way in which transcriptions have been made.
                  </span>
                  <div
                    className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
                  />
                  <div
                    className="StyledBox-sc-13pk1d4-0 ecGxSF"
                  >
                    <button
                      className="StyledButton-sc-323bzc-0 dmFHgS"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <div
                        className="StyledBox-sc-13pk1d4-0 htLYVV sc-kgoBCf fDGffR"
                      >
                        <img
                          alt="Optics Aggregation Example"
                          className="StyledImage-ey4zx9-0 Axri"
                          src="optics.png"
                        />
                        <div
                          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
                        />
                        <span
                          className="StyledText-sc-1sadyjn-0 bmpSIR"
                        >
                          OPTICS Reducer
                        </span>
                        <div
                          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
                        />
                        <span
                          className="StyledText-sc-1sadyjn-0 fNQaFh"
                          size="xsmall"
                        >
                          Used for clustering full-width transcriptions
                        </span>
                      </div>
                    </button>
                    <button
                      className="StyledButton-sc-323bzc-0 dmFHgS"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <div
                        className="StyledBox-sc-13pk1d4-0 htLYVV sc-kGXeez lgIlUY"
                      >
                        <img
                          alt="DBScan Aggregation Example"
                          className="StyledImage-ey4zx9-0 Axri"
                          src="dbscan.png"
                        />
                        <div
                          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
                        />
                        <span
                          className="StyledText-sc-1sadyjn-0 bmpSIR"
                        >
                          DBSCAN Reducer
                        </span>
                        <div
                          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
                        />
                        <span
                          className="StyledText-sc-1sadyjn-0 fNQaFh"
                          size="xsmall"
                        >
                          Used for clustering shorter, incomplete transcriptions of a line
                        </span>
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 jjeUtd"
                >
                  <button
                    aria-label="Close Aggregation Settings"
                    className="StyledButton-sc-323bzc-0 dmFHgS"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    type="button"
                  >
                    <span
                      className="StyledText-sc-1sadyjn-0 bEMqcB"
                      size="small"
                    >
                      CLOSE AND CANCEL
                    </span>
                  </button>
                  <div
                    className="StyledBox__StyledBoxGap-sc-13pk1d4-1 gNUkxn"
                  />
                  <button
                    className="StyledButton-sc-323bzc-0 ivDLrh"
                    disabled={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    type="button"
                  >
                    <span
                      className="StyledText-sc-1sadyjn-0 bEMqcB"
                      size="small"
                    >
                      NEXT
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DownloadDataModal Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 iNPZuM"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 bkeXWw"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 cGDWft"
      >
        <span
          className="StyledText-sc-1sadyjn-0 dEfHdc"
          size="large"
        >
          Download subject data
        </span>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 gNUkxn"
        />
        <button
          aria-label="Close Download Subject Data Modal"
          className="StyledButton-sc-323bzc-0 laBEqz"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times-circle fa-w-16 fa-xs "
            data-icon="times-circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
      />
      <span
        className="StyledText-sc-1sadyjn-0 cCeGeK"
      >
        Download a .zip file containing:
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 fWrrBh"
      >
        <span
          className="StyledText-sc-1sadyjn-0 bEMqcB"
          size="small"
        >
          • Line by line transcription and metadata (.csv)
        </span>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
        />
        <span
          className="StyledText-sc-1sadyjn-0 bEMqcB"
          size="small"
        >
          • Text-only file (.txt)
        </span>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
        />
        <span
          className="StyledText-sc-1sadyjn-0 bEMqcB"
          size="small"
        >
          • Raw, unparsed transcription data (.json)
        </span>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 jHMQGC"
      >
        <button
          aria-label="Close Download Subject Data Modal"
          className="StyledButton-sc-323bzc-0 jfbKsv"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 bEMqcB"
            size="small"
          >
            CLOSE
          </span>
        </button>
        <button
          aria-label="Download Subject Data"
          className="StyledButton-sc-323bzc-0 jfbKsv"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 bEMqcB"
            size="small"
          >
            DOWNLOAD
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FilmstripViewer Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 iNPZuM"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 kFLDHg sc-brqgnP jxxQpd"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 cGDWft"
      >
        <span
          className="StyledText-sc-1sadyjn-0 bXoRNz"
          size="1em"
        >
          All Pages
        </span>
        <button
          className="StyledButton-sc-323bzc-0 dmFHgS"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 jHQJnz"
          >
            <span
              className="StyledText-sc-1sadyjn-0 bmpSIR sc-jWBwVP HYnmJ"
            >
              Collapse
               Filmstrip
            </span>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 iEoiXx"
            />
            <svg
              aria-label="FormUp"
              className="StyledIcon-ofa7kd-0 iOkQrb"
              viewBox="0 0 24 24"
            >
              <polyline
                fill="none"
                points="18 9 12 15 6 9"
                stroke="#000"
                strokeWidth="2"
                transform="matrix(1 0 0 -1 0 24)"
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 ilHtzj"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots HeaderButtons LayoutButton 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <button
    className="StyledButton-sc-323bzc-0 dmFHgS"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 jHQJnz"
    >
      <span
        className="StyledText-sc-1sadyjn-0 gcASOG sc-eNQAEJ jtFbJk"
      >
        Layout
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 iEoiXx"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 ekjAwv"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-pause fa-w-14 fa-xs "
          color="#555555"
          data-icon="pause"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M144 479H48c-26.5 0-48-21.5-48-48V79c0-26.5 21.5-48 48-48h96c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zm304-48V79c0-26.5-21.5-48-48-48h-96c-26.5 0-48 21.5-48 48v352c0 26.5 21.5 48 48 48h96c26.5 0 48-21.5 48-48z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hhQian"
        />
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-pause fa-w-14 fa-xs fa-rotate-90 "
          color="#CCCCCC"
          data-icon="pause"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M144 479H48c-26.5 0-48-21.5-48-48V79c0-26.5 21.5-48 48-48h96c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zm304-48V79c0-26.5-21.5-48-48-48h-96c-26.5 0-48 21.5-48 48v352c0 26.5 21.5 48 48 48h96c26.5 0 48-21.5 48-48z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`Storyshots HeaderButtons MoreButton 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <button
    aria-label="Open Drop"
    className="StyledButton-sc-323bzc-0 dmFHgS"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 hfsUvK"
    >
      <span
        className="StyledText-sc-1sadyjn-0 gcASOG"
      >
        MORE
      </span>
      <svg
        aria-label="FormDown"
        className="StyledIcon-ofa7kd-0 iOkQrb"
        viewBox="0 0 24 24"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          strokeWidth="2"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots HeaderButtons UndoButton 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <button
    className="StyledButton-sc-323bzc-0 ivDLrh"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 jHQJnz"
    >
      <span
        className="StyledText-sc-1sadyjn-0 gcASOG sc-eNQAEJ jtFbJk"
      >
        Undo
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 iEoiXx"
      />
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-redo fa-w-16 fa-xs "
        color="#555555"
        data-icon="redo"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M500.33 0h-47.41a12 12 0 0 0-12 12.57l4 82.76A247.42 247.42 0 0 0 256 8C119.34 8 7.9 119.53 8 256.19 8.1 393.07 119.1 504 256 504a247.1 247.1 0 0 0 166.18-63.91 12 12 0 0 0 .48-17.43l-34-34a12 12 0 0 0-16.38-.55A176 176 0 1 1 402.1 157.8l-101.53-4.87a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12h200.33a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots LineViewer Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 iNPZuM"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 biltor sc-fjdhpX fCEyoV"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 eTTqCm"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 hFIMGw"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 fWrrBh"
          >
            <span
              className="StyledText-sc-1sadyjn-0 dxiclx sc-VigVT cDzzLD"
              size="0.6em"
            >
              Selected Transcription
            </span>
          </div>
        </div>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 fWSBgY"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 eDJfis"
        />
        <div
          className="StyledBox-sc-13pk1d4-0 iRPRCt"
        >
          
          <div
            className="StyledBox-sc-13pk1d4-0 ekjAwv"
          >
            <label
              checked={false}
              className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 irBISV"
              onClick={[Function]}
            >
              <div
                checked={false}
                className="StyledBox-sc-13pk1d4-0 hZaesx StyledCheckBox-sc-1dbk5ju-6 jXdLin"
              >
                <input
                  checked={false}
                  className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cZcPJD"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="StyledBox-sc-13pk1d4-0 bbcswH StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                />
              </div>
            </label>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 iEoiXx"
            />
            <div
              className="StyledBox-sc-13pk1d4-0 jUNXut"
            >
              <div
                className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 VFomL"
              >
                <input
                  autoComplete="off"
                  className="StyledTextInput-sc-1x30a0s-0 bVzAne"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Write new..."
                  size="xsmall"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 gPLowh"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 ekjAwv"
        >
          <button
            className="StyledButton-sc-323bzc-0 jfbKsv"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            type="button"
          >
            <span
              className="StyledText-sc-1sadyjn-0 fNQaFh sc-VigVT cDzzLD"
              size="xsmall"
            >
              Cancel
            </span>
          </button>
        </div>
        <div
          className="StyledBox-sc-13pk1d4-0 TetEL"
        >
          <button
            className="StyledButton-sc-323bzc-0 chnll"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            type="button"
          >
            <span
              className="StyledText-sc-1sadyjn-0 fNQaFh sc-VigVT cDzzLD"
              size="xsmall"
            >
              Add Line
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MarkApproved Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <label
    checked={false}
    className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 kWeChd"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="StyledText-sc-1sadyjn-0 gcASOG sc-hMqMXs isvcEd"
    >
      Ready For Review
    </span>
    <div
      checked={false}
      className="StyledBox-sc-13pk1d4-0 fdQGpV StyledCheckBox-sc-1dbk5ju-6 jXdLin"
      disabled={false}
    >
      <input
        checked={false}
        className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dmrmuV"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <span
        checked={false}
        className="StyledCheckBox__StyledCheckBoxToggle-sc-1dbk5ju-4 kOvstK"
        disabled={false}
      >
        <span
          checked={false}
          className="StyledCheckBox__StyledCheckBoxKnob-sc-1dbk5ju-5 GTsLr"
          disabled={false}
        />
      </span>
    </div>
  </label>
</div>
`;

exports[`Storyshots MetadataButton Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 iNPZuM"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 fALNzc"
    >
      <button
        aria-label="Open Metadata Information"
        className="StyledButton-sc-323bzc-0 kIGMdK"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 esKdNL"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-info fa-w-6 sc-eHgmQL tiSJc"
            data-icon="info"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots SearchModalContainer Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 iNPZuM"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 jLJOXa"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 kULYLq"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 fWrrBh"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 hFIMGw"
          >
            <span
              className="StyledText-sc-1sadyjn-0 dEfHdc"
              size="large"
            >
              Search or Filter
            </span>
            <button
              aria-label="Close Subject Search Modal"
              className="StyledButton-sc-323bzc-0 kIGMdK"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-times-circle fa-w-16 "
                data-icon="times-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </button>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bloGGK"
          />
          <span
            className="StyledText-sc-1sadyjn-0 bmpSIR sc-jDwBTQ hGYXTl"
          >
            Find a specific subject
          </span>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bloGGK"
          />
          <form
            className="StyledBox-sc-13pk1d4-0 fWrrBh"
            onSubmit={[Function]}
          >
            <div
              className="StyledBox-sc-13pk1d4-0 jbNAjJ"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 iEMnku"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 hEeEAx FormField__FormFieldBox-m9hood-0 btlOdO sc-gPEVay kIjqED"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 cxYjCj"
                    htmlFor="type"
                  >
                    ID TYPE
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 cLmlkO"
                  >
                    <button
                      aria-label="Open Drop"
                      className="StyledButton-sc-323bzc-0 dmFHgS Select__StyledSelectDropButton-sc-17idtfo-1 cvpccN"
                      id="type"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <div
                        className="StyledBox-sc-13pk1d4-0 hFIMGw"
                      >
                        <div
                          className="StyledBox-sc-13pk1d4-0 hxmgAG"
                        >
                          <span
                            className="StyledText-sc-1sadyjn-0 bmpSIR"
                          >
                            Select...
                          </span>
                        </div>
                        <div
                          className="StyledBox-sc-13pk1d4-0 eWMcdv"
                          style={
                            Object {
                              "minWidth": "auto",
                            }
                          }
                        >
                          <svg
                            aria-label="FormDown"
                            className="StyledIcon-ofa7kd-0 bKsZCm"
                            viewBox="0 0 24 24"
                          >
                            <polyline
                              fill="none"
                              points="18 9 12 15 6 9"
                              stroke="#000"
                              strokeWidth="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                className="StyledBox__StyledBoxGap-sc-13pk1d4-1 iEoiXx"
              />
              <div
                className="StyledBox-sc-13pk1d4-0 bgTRhM"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 hEeEAx FormField__FormFieldBox-m9hood-0 btlOdO sc-gPEVay kIjqED"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 cxYjCj"
                    htmlFor="id"
                  >
                    NAME
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 cLmlkO"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kYQCpm"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 kiJqqj"
                        color="red"
                        disabled={false}
                        id="id"
                        name="id"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="eg. 58674"
                        size="small"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bloGGK"
            />
            <span
              className="StyledText-sc-1sadyjn-0 bmpSIR sc-jDwBTQ hGYXTl"
            >
              Filter subject list by status
            </span>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bloGGK"
            />
            <div
              className="StyledBox-sc-13pk1d4-0 cGDWft"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 fWrrBh"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 kutFY"
                >
                  Approval Status
                </span>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bloGGK"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 hEeEAx FormField__FormFieldBox-m9hood-0 btlOdO"
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 cLmlkO"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 gHIYHd"
                      disabled={false}
                      htmlFor="unseen"
                      onClick={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 ijCAgr StyledCheckBox-sc-1dbk5ju-6 jXdLin"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dijSVl"
                          disabled={false}
                          id="unseen"
                          name="unseen"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 eoaItH StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 bEMqcB"
                        size="small"
                      >
                        UNSEEN
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bloGGK"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 hEeEAx FormField__FormFieldBox-m9hood-0 btlOdO"
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 cLmlkO"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 gHIYHd"
                      disabled={false}
                      htmlFor="in_progress"
                      onClick={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 ijCAgr StyledCheckBox-sc-1dbk5ju-6 jXdLin"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dijSVl"
                          disabled={false}
                          id="in_progress"
                          name="in_progress"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 eoaItH StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 bEMqcB"
                        size="small"
                      >
                        IN PROGRESS
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bloGGK"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 hEeEAx FormField__FormFieldBox-m9hood-0 btlOdO"
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 cLmlkO"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 gHIYHd"
                      disabled={false}
                      htmlFor="ready"
                      onClick={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 ijCAgr StyledCheckBox-sc-1dbk5ju-6 jXdLin"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dijSVl"
                          disabled={false}
                          id="ready"
                          name="ready"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 eoaItH StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 bEMqcB"
                        size="small"
                      >
                        READY FOR REVIEW
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bloGGK"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 hEeEAx FormField__FormFieldBox-m9hood-0 btlOdO"
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 cLmlkO"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 gHIYHd"
                      disabled={false}
                      htmlFor="approved"
                      onClick={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 ijCAgr StyledCheckBox-sc-1dbk5ju-6 jXdLin"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dijSVl"
                          disabled={false}
                          id="approved"
                          name="approved"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 eoaItH StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 bEMqcB"
                        size="small"
                      >
                        APPROVED
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                className="StyledBox-sc-13pk1d4-0 fWrrBh"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 kutFY"
                >
                  Additional Filters
                </span>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bloGGK"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 hEeEAx FormField__FormFieldBox-m9hood-0 btlOdO"
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 cLmlkO"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 gHIYHd"
                      disabled={false}
                      htmlFor="flagged"
                      onClick={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 ijCAgr StyledCheckBox-sc-1dbk5ju-6 jXdLin"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dijSVl"
                          disabled={false}
                          id="flagged"
                          name="flagged"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 eoaItH StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 bEMqcB"
                        size="small"
                      >
                        FLAGGED
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bloGGK"
            />
            <div
              className="StyledBox-sc-13pk1d4-0 jHMQGC"
            >
              <button
                aria-label="Close Subject Search Modal"
                className="StyledButton-sc-323bzc-0 dmFHgS"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                type="button"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 bmpSIR sc-jDwBTQ hGYXTl"
                >
                  Close
                </span>
              </button>
              <button
                aria-label="Submit Subject Search Query"
                className="StyledButton-sc-323bzc-0 dmFHgS"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                type="submit"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 bmpSIR sc-jDwBTQ hGYXTl"
                >
                  Search
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SubjectLockedModal Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 iNPZuM"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 fPaSPq"
    >
      <span
        className="StyledText-sc-1sadyjn-0 dEfHdc"
        size="large"
      >
        Subject locked
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
      />
      <span
        className="StyledText-sc-1sadyjn-0 bmpSIR sc-cMljjf djFewk"
      >
        This subject cannot be accessed because 
        <strong />
         is currently accessing it.
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
      />
      <span
        className="StyledText-sc-1sadyjn-0 bmpSIR sc-cMljjf djFewk"
      >
        For access, ask them to close their version.
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
      />
      <button
        aria-label="Return to Group Index Page"
        className="StyledButton-sc-323bzc-0 jfbKsv"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <span
          className="StyledText-sc-1sadyjn-0 bEMqcB"
          size="small"
        >
          BACK TO GROUP INDEX
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots SubjectViewer Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 dwUWku"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 hHJqSn"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="StyledBox-sc-13pk1d4-0 iGfFSe"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 hFIMGw"
        >
          <span
            className="StyledText-sc-1sadyjn-0 bXoRNz"
            size="1em"
          >
            Original Subject
          </span>
          <div
            className="StyledBox-sc-13pk1d4-0 ekjAwv"
          >
            <button
              className="StyledButton-sc-323bzc-0 jfbKsv"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <span
                className="StyledText-sc-1sadyjn-0 bmpSIR"
              >
                HIDE ALL LINES
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 lfMSfr sc-Rmtcm cGINmZ"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 lfMSfr sc-bRBYWo iWvEYT"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 kYbCiA sc-csuQGl jfGFKk"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 fWrrBh sc-bRBYWo sc-hzDkRC fcssmf"
          />
        </div>
        <div
          className="StyledBox-sc-13pk1d4-0 lfMSfr"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots UnapproveModal Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 iNPZuM"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 fPaSPq"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 cGDWft"
      >
        <span
          className="StyledText-sc-1sadyjn-0 dEfHdc"
          size="large"
        >
          Unapprove subject data
        </span>
        <button
          aria-label="Close Unapprove Subject Modal"
          className="StyledButton-sc-323bzc-0 jfbKsv"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times-circle fa-w-16 fa-xs "
            data-icon="times-circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
      />
      <span
        className="StyledText-sc-1sadyjn-0 bmpSIR sc-jAaTju lmAtdT"
      >
        By unapproving this subject, the subject's data will be unavailable for future downloads until re-marked as approved.
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
      />
      <span
        className="StyledText-sc-1sadyjn-0 bmpSIR sc-jAaTju lmAtdT"
      >
        This action can be reversed at any time.
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 jHMQGC"
      >
        <button
          aria-label="Close Unapprove Subject Modal"
          className="StyledButton-sc-323bzc-0 jfbKsv"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 bEMqcB"
            size="small"
          >
            CLOSE AND CANCEL
          </span>
        </button>
        <button
          aria-label="Confirm to Unapprove Subject"
          className="StyledButton-sc-323bzc-0 jfbKsv"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 bEMqcB"
            size="small"
          >
            YES, UNAPPROVE
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
